--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -2,8 +2,13 @@ Peter Spiess-Knafl <peter.knafl@gmail.com>
 	core library
 	cmake build system
 
-contributions:
-	Joegen Baclor <joegen@ossapp.com>
-		automake/autoconf support
-		RPM packaging
-		
+contributions (chronological order):
+    Joegen Baclor <joegen@ossapp.com>
+        automake/autoconf support
+        RPM packaging
+
+    Bertrand Cachet <bertrand.cachet@gmail.com>
+        adapted build file for opt out of HTTP connectors
+
+    Marc Trudel <mtrudel@wizcorp.jp>
+        extended HTTP client connector
